[gd_scene load_steps=25 format=3 uid="uid://cbsj8fmdfsk7c"]

[ext_resource type="Script" path="res://field_scripts/field.gd" id="1_b253i"]
[ext_resource type="Script" path="res://field_scripts/grid.gd" id="2_e31t5"]
[ext_resource type="Script" path="res://field_scripts/tackle_zone_component.gd" id="3_h6vdg"]
[ext_resource type="PackedScene" uid="uid://bi6yt2brbqtb5" path="res://opponents/block_test/blockTest.tscn" id="4_lr5qp"]
[ext_resource type="PackedScene" uid="uid://cjc0wmuq7nhnp" path="res://teams/SkavenTeam/skaven_team.tscn" id="5_pwgb4"]
[ext_resource type="Script" path="res://observers/selection_observer.gd" id="6_dvbdd"]
[ext_resource type="Script" path="res://observers/block_action_observer.gd" id="7_5bpkx"]
[ext_resource type="Script" path="res://field_scripts/block_die_calculator.gd" id="8_05qm4"]
[ext_resource type="Script" path="res://observers/move_action_observer.gd" id="9_c06of"]
[ext_resource type="Script" path="res://observers/blitz_action_observer.gd" id="10_2vqkj"]
[ext_resource type="PackedScene" uid="uid://bmtdo3dyib0l3" path="res://components/component_scenes/input_component.tscn" id="11_3acam"]
[ext_resource type="Script" path="res://puzzles/score_puzzle.gd" id="12_wgym6"]
[ext_resource type="PackedScene" uid="uid://cggqb75a8w8r" path="res://addons/debug_menu/debug_menu.tscn" id="13_s7aq1"]
[ext_resource type="Theme" uid="uid://btrn53r4bnl4p" path="res://ui/themes/challenge_ui_theme.tres" id="14_qcchv"]
[ext_resource type="Script" path="res://ui/scripts/ui_controller.gd" id="15_4jnb8"]
[ext_resource type="Script" path="res://ui/scripts/side_board.gd" id="16_wvs8t"]
[ext_resource type="Script" path="res://ui/scripts/player_card.gd" id="17_kclv1"]
[ext_resource type="Theme" uid="uid://cv3jyrorne2a8" path="res://ui/themes/pixel_button.tres" id="18_joiwg"]
[ext_resource type="Script" path="res://ui/scripts/end_setup_button_label.gd" id="19_esi81"]
[ext_resource type="Script" path="res://ui/scripts/log.gd" id="20_e2aaa"]
[ext_resource type="Theme" uid="uid://bkr6lis8hc3cq" path="res://ui/themes/check_button_theme.tres" id="21_n4yur"]
[ext_resource type="Theme" uid="uid://m23e5cg5apra" path="res://ui/themes/dice_label_theme.tres" id="22_y1k0f"]
[ext_resource type="Texture2D" uid="uid://bgupcleo51cf" path="res://assets/textures/player_sprites/line_rat.png" id="23_2mu2k"]

[sub_resource type="GDScript" id="GDScript_rwm74"]
script/source = "extends Control
class_name GameController
@export var  level_name:String =\"null\"
@export var opponent_placement_allowed:bool = false
@export var field:Field
@export var ui_controller:UiController
@export var selection_observer:SelectionObserver

@onready var end_setup_button:Button = ui_controller.end_setup_button
@onready var sideboard:PanelContainer = ui_controller.sideboard
@onready var player_team:TeamComponent = field.player_team

var total_players
var game_state = GAME_STATE.SETUP

signal game_state_changed(game_state)
func _ready():
	total_players = player_team.get_players(); 
	ui_controller.get_end_setup_button_signal().connect(on_end_setup_pressed)
	field.place_opponent_team_on_field()
	field.place_player_team_on_field()
	GameStateMachine.switch_states(GAME_STATE.SETUP)

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
	
func get_game_state() -> GAME_STATE:
	return game_state
	
func set_game_state(game_state:GAME_STATE):
	self.game_state = game_state




func on_end_setup_pressed():
	if sideboard.players_on_sideboard != 0:
		
		
		LogController.add_text(\"ERROR: Not all players from the sideboard are on the field\")
		return
	start_game_state_play()

func start_game_state_play():
	game_state = GAME_STATE.PLAY
	game_state_changed.emit(game_state)


"

[node name="GameController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = SubResource("GDScript_rwm74")
level_name = "skaven one turn"
opponent_placement_allowed = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 3)
anchor_mode = 0
editor_draw_limits = true

[node name="Field" type="Node2D" parent="." node_paths=PackedStringArray("sideboard", "grid", "selection_observer", "block_action_observer", "player_team", "tackle_zone_component", "opponent")]
unique_name_in_owner = true
z_index = 1
position = Vector2(65, 46)
script = ExtResource("1_b253i")
sideboard = NodePath("../Ui/SideBoard")
grid = NodePath("grid")
selection_observer = NodePath("../SelectionObserver")
block_action_observer = NodePath("../BlockActionObserver")
player_team = NodePath("PlayerTeam")
tackle_zone_component = NodePath("TackleZoneComponent")
opponent = NodePath("Opponent")

[node name="grid" type="Node2D" parent="Field"]
z_index = 2
script = ExtResource("2_e31t5")

[node name="TackleZoneComponent" type="Node2D" parent="Field" node_paths=PackedStringArray("grid", "field", "player_team", "opponent", "ui_controller")]
script = ExtResource("3_h6vdg")
grid = NodePath("../grid")
field = NodePath("..")
player_team = NodePath("../PlayerTeam")
opponent = NodePath("../Opponent")
ui_controller = NodePath("../../Ui")

[node name="Opponent" parent="Field" node_paths=PackedStringArray("ui_controller", "grid") instance=ExtResource("4_lr5qp")]
z_index = 3
ui_controller = NodePath("../../Ui")
grid = NodePath("../grid")

[node name="PlayerTeam" parent="Field" node_paths=PackedStringArray("ui_controller", "grid") instance=ExtResource("5_pwgb4")]
z_index = 3
ui_controller = NodePath("../../Ui")
grid = NodePath("../grid")

[node name="SelectionObserver" type="Node2D" parent="." node_paths=PackedStringArray("field", "ui_controller")]
unique_name_in_owner = true
script = ExtResource("6_dvbdd")
field = NodePath("../Field")
ui_controller = NodePath("../Ui")
free_placement = null

[node name="BlockActionObserver" type="Node2D" parent="." node_paths=PackedStringArray("blockDieCalculator", "field")]
position = Vector2(65, 46)
script = ExtResource("7_5bpkx")
blockDieCalculator = NodePath("BlockDieCalculator")
field = NodePath("../Field")

[node name="BlockDieCalculator" type="Node2D" parent="BlockActionObserver" node_paths=PackedStringArray("field")]
script = ExtResource("8_05qm4")
field = NodePath("../../Field")

[node name="MoveActionObserver" type="Node2D" parent="." node_paths=PackedStringArray("field", "ui_controller", "selection_observer")]
script = ExtResource("9_c06of")
field = NodePath("../Field")
ui_controller = NodePath("../Ui")
selection_observer = NodePath("../SelectionObserver")

[node name="BlitzActionObserver" type="Node2D" parent="." node_paths=PackedStringArray("field", "selectionObserver", "blockDieCalculator")]
script = ExtResource("10_2vqkj")
field = NodePath("../Field")
selectionObserver = NodePath("../SelectionObserver")
blockDieCalculator = NodePath("BlockDieCalculator")

[node name="BlockDieCalculator" type="Node2D" parent="BlitzActionObserver" node_paths=PackedStringArray("field")]
script = ExtResource("8_05qm4")
field = NodePath("../../Field")

[node name="InputComponent" parent="BlitzActionObserver" instance=ExtResource("11_3acam")]

[node name="VictoryObserver" type="Node2D" parent="."]
script = ExtResource("12_wgym6")

[node name="CanvasLayer" parent="." instance=ExtResource("13_s7aq1")]

[node name="Ui" type="Control" parent="." node_paths=PackedStringArray("sideboard", "move_popup", "end_setup_button", "player_team_tackle_check_button", "opponent_tackle_check_button")]
z_index = 1
anchors_preset = 0
offset_top = 1.0
offset_right = 1920.0
offset_bottom = 1085.0
theme = ExtResource("14_qcchv")
script = ExtResource("15_4jnb8")
sideboard = NodePath("SideBoard")
move_popup = NodePath("MovePopup")
end_setup_button = NodePath("EndSetupButton")
player_team_tackle_check_button = NodePath("TackleZoneCheckButton")
opponent_tackle_check_button = NodePath("OpponentTackleCheck")

[node name="SideBoard" type="PanelContainer" parent="Ui"]
layout_mode = 0
offset_left = 678.0
offset_top = 92.0
offset_right = 1014.0
offset_bottom = 344.0
theme = ExtResource("14_qcchv")
script = ExtResource("16_wvs8t")

[node name="Label" type="Label" parent="Ui/SideBoard"]
layout_mode = 2
size_flags_vertical = 0
text = "your players"
horizontal_alignment = 1
uppercase = true

[node name="ChallengeInformation" type="PanelContainer" parent="Ui"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125717
anchor_top = -0.0470963
anchor_right = 1.45384
anchor_bottom = 1.08851
offset_left = 787.623
offset_top = 73.0524
offset_right = -994.377
offset_bottom = -948.948
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_qcchv")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Ui/ChallengeInformation"]
layout_mode = 2
size_flags_vertical = 0
text = "Challenge Information"
horizontal_alignment = 1
uppercase = true

[node name="PlayerCard" type="PanelContainer" parent="Ui" node_paths=PackedStringArray("player_team", "selectionObserver", "opponent", "field")]
layout_mode = 0
offset_left = 698.0
offset_top = 606.0
offset_right = 956.0
offset_bottom = 978.0
tooltip_text = "Displays the last selected player stats"
script = ExtResource("17_kclv1")
player_team = NodePath("../../Field/PlayerTeam")
selectionObserver = NodePath("../../SelectionObserver")
opponent = NodePath("../../Field/Opponent")
field = NodePath("../../Field")

[node name="Label" type="Label" parent="Ui/PlayerCard"]
layout_mode = 2
size_flags_vertical = 0
text = "Player Card"
horizontal_alignment = 1
clip_text = true
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/PlayerCard"]
clip_contents = true
layout_mode = 2

[node name="Space filler" type="Label" parent="Ui/PlayerCard/VBoxContainer"]
layout_mode = 2

[node name="Space filler2" type="Label" parent="Ui/PlayerCard/VBoxContainer"]
layout_mode = 2
text = "STATS"

[node name="MA_label" type="Label" parent="Ui/PlayerCard/VBoxContainer"]
layout_mode = 2

[node name="ST_label" type="Label" parent="Ui/PlayerCard/VBoxContainer"]
layout_mode = 2

[node name="AG_label" type="Label" parent="Ui/PlayerCard/VBoxContainer"]
layout_mode = 2

[node name="PA_label" type="Label" parent="Ui/PlayerCard/VBoxContainer"]
layout_mode = 2

[node name="AV_label" type="Label" parent="Ui/PlayerCard/VBoxContainer"]
layout_mode = 2

[node name="EndSetupButton" type="Button" parent="Ui"]
layout_mode = 0
offset_left = 679.0
offset_top = 400.0
offset_right = 990.0
offset_bottom = 514.0
theme = ExtResource("18_joiwg")

[node name="Label" type="Label" parent="Ui/EndSetupButton"]
layout_mode = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 309.0
offset_bottom = 75.0
text = "end setup"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("19_esi81")

[node name="GameLog" type="PanelContainer" parent="Ui"]
clip_contents = true
layout_direction = 2
layout_mode = 0
offset_left = 1104.0
offset_top = 513.0
offset_right = 1831.0
offset_bottom = 959.0
tooltip_text = "logs all the actions you took"
script = ExtResource("20_e2aaa")

[node name="ScrollContainer" type="ScrollContainer" parent="Ui/GameLog"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Label" type="Label" parent="Ui/GameLog/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
clip_text = true
uppercase = true

[node name="Label" type="Label" parent="Ui"]
layout_mode = 2
offset_left = 1136.0
offset_top = 519.0
offset_right = 1820.0
offset_bottom = 546.0
text = "LOG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TackleZoneCheckButton" type="CheckButton" parent="Ui"]
z_index = 5
layout_mode = 0
offset_left = 5.0
offset_top = 231.0
offset_right = 806.0
offset_bottom = 952.0
scale = Vector2(0.122, 0.122)
theme = ExtResource("21_n4yur")

[node name="OpponentTackleCheck" type="CheckButton" parent="Ui"]
layout_mode = 0
offset_left = 5.0
offset_top = 447.0
offset_right = 806.0
offset_bottom = 1154.0
scale = Vector2(0.122, 0.122)
theme = ExtResource("21_n4yur")

[node name="MovePopup" type="Label" parent="Ui"]
visible = false
layout_mode = 0
offset_left = 661.0
offset_top = 375.0
offset_right = 1037.0
offset_bottom = 591.0
theme = ExtResource("22_y1k0f")
theme_override_font_sizes/font_size = 25
text = "Press SPACE to continue

Press RMB to reset the path"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton" type="Button" parent="Ui"]
visible = false
layout_mode = 0
offset_left = 1389.0
offset_top = 375.0
offset_right = 1738.0
offset_bottom = 487.0
toggle_mode = true
text = "save"

[node name="Label2" type="Label" parent="Ui"]
layout_mode = 0
offset_left = 5.0
offset_top = 175.0
offset_right = 109.0
offset_bottom = 231.0
text = "Tackle Zones
player"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Ui/Label2"]
layout_mode = 0
offset_top = 216.0
offset_right = 104.0
offset_bottom = 272.0
text = "Tackle Zones
opponent"
horizontal_alignment = 1

[node name="ActionBox" type="PanelContainer" parent="Ui"]
visible = false
layout_mode = 0
offset_left = 1029.0
offset_top = 239.0
offset_right = 1858.9
offset_bottom = 543.009
theme = ExtResource("14_qcchv")

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/ActionBox"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/ActionBox/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="Ui/ActionBox/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("23_2mu2k")
expand_mode = 5

[node name="Label" type="Label" parent="Ui/ActionBox/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Ui/ActionBox/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="Ui/ActionBox/HBoxContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("23_2mu2k")
expand_mode = 5

[node name="Label" type="Label" parent="Ui/ActionBox/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="Ui/ActionBox/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="Ui/ActionBox/HBoxContainer/VBoxContainer3"]
layout_mode = 2
texture = ExtResource("23_2mu2k")
expand_mode = 5

[node name="Label" type="Label" parent="Ui/ActionBox/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="Ui/ActionBox/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="Ui/ActionBox/HBoxContainer/VBoxContainer4"]
layout_mode = 2
texture = ExtResource("23_2mu2k")
expand_mode = 5

[node name="Label" type="Label" parent="Ui/ActionBox/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer5" type="VBoxContainer" parent="Ui/ActionBox/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="Ui/ActionBox/HBoxContainer/VBoxContainer5"]
layout_mode = 2
texture = ExtResource("23_2mu2k")
expand_mode = 5

[node name="Label" type="Label" parent="Ui/ActionBox/HBoxContainer/VBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[connection signal="button_down" from="Ui/EndSetupButton" to="Ui/EndSetupButton/Label" method="_on_end_setup_button_button_down"]
[connection signal="button_up" from="Ui/EndSetupButton" to="Ui/EndSetupButton/Label" method="_on_end_setup_button_button_up"]
[connection signal="toggled" from="Ui/TackleZoneCheckButton" to="Field/TackleZoneComponent" method="_on_tackle_zone_check_button_toggled"]
[connection signal="toggled" from="Ui/OpponentTackleCheck" to="Field/TackleZoneComponent" method="_on_check_button_toggled"]
[connection signal="toggled" from="Ui/SaveButton" to="Field" method="_on_save_button_toggled"]
